syntax = "proto3";

option go_package = ".;proto";

message PingRequest {
  string dst_addr = 1;
  string src_addr = 2;
  int32 count = 3;
  int32 ttl = 4;
  int32 tos = 5;
  int32 size = 6;
  string timeout = 7;
  string interval = 8;
}

message PingReply {
  double rtt = 1;
  int32 seq = 2;
  int32 ttl = 3;
  int32 size = 4;
  string addr = 5;
  string err = 6;
}

service Ping {
  rpc GetPing(PingRequest) returns (stream PingReply) {}
}